# uncertainty-demonstrated-feedback

./: .env.example  .gitignore  README.md  pyproject.toml
benchmark/: generate_samples.py  run_evaluation.py  summarize_results.py
configs/: conclude.yaml  default_sft.yaml  ditto.yaml  eval.yaml  evaluate.yaml  generate_samples.yaml  generation.yaml  pythia160m_dpo.yaml  smollm2-135m_dpo.yaml  smollm2-135m_sft.yaml
configs/ditto/: SmolLM2-135M-Instruct.yaml  SmolLM2-360M-Instruct.yaml  default.yaml  gemma3-270m-it.yaml  sanity-check.yaml
configs/dpo/: default.yaml
configs/model/: llama-31-8b.yaml  ministral-8b.yaml  mistral-7b.yaml  qwen-3-8b.yaml
configs/sft/: default.yaml
scripts/: callback.py  collator.py  ditto.py  dpo.py  estimator.py  eval.py  generate_samples.py  sanity_check.py  sft.py  train_ditto.py  trainer.py  uditto.py  utils.py
src/alignment/: utils.py
src/alignment/callbacks/: __init__.py  base.py  callbacks.py  logging.py  resample.py  save_lora.py  wandb.py
src/alignment/collators/: __init__.py  ditto.py  dpo.py  sft.py  uditto.py
src/alignment/data/: data_collator.py  preference_dataset.py  utils.py
src/alignment/estimators/: base.py  msp.py
src/alignment/train/: callbacks.py  trainers.py
src/alignment/train/dpo/: trainer.py
src/alignment/trainers/: __init__.py  base.py  ditto.py  dpo.py  sft.py
tests/: test_collators.py  test_generate.py  test_trainer.py
