[project]
name = "uncertainty-demonstrated-feedback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "hf-xet>=1.1.5",
    "hydra-core>=1.3.2",
    "pandas>=2.3.0",
    "torch==2.8.0",
    "transformers>=4.53.1",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.4.12/flash_attn-2.8.3+cu128torch2.8-cp313-cp313-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.13'",
    "vllm>=0.11.0 ; sys_platform == 'linux'",
    "mypy>=1.17.0",
    "google-genai>=1.28.0",
    "huggingface-hub>=0.33.4",
    "python-dotenv>=1.1.1",
    "wandb>=0.21.0",
    "peft>=0.17.0",
    "tiktoken>=0.9.0",
    "hf-transfer",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.extra-build-dependencies]
xformers = ["torch"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
extend-select = ["B"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
